added redirect and toast, updated css

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -51,6 +51,6 @@
   </body>
   <!-- Footer-->
 <footer class="bg-light py-5">
-  <div class="container"><div class="small text-center text-muted">Copyright © 2020 • The Sharing Basket</div>
+  <div class="container"><div class="small text-center text-muted">Copyright © 2020 • Sharing Basket</div>
 </footer>
 </html>
