--- a/client/public/index.html
+++ b/client/public/index.html
@@ -48,9 +48,18 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+        <!-- Footer-->
+        <footer class="bg-light py-5">
+          <div class="container"><div class="small text-center text-muted">Copyright © 2020 • Sharing Basket</div>
+      </footer>
+      <!-- Bootstrap core JS-->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+  
+      <!-- Third party plugin JS-->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+
   </body>
-  <!-- Footer-->
-<footer class="bg-light py-5">
-  <div class="container"><div class="small text-center text-muted">Copyright © 2020 • Sharing Basket</div>
-</footer>
+</footer> 
 </html>
